	[NSMenuItem menu] returns non-nil.

Mon Nov 22 14:51:33:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSWindow.m: Tidied activation/deactivation code.
	* Source/NSApplication.m: Fixed Windows menu for new menu API.
	Changed to use arrays to store deactivated/hidden windows and to
	keep track of key window when hidden.  Watch window notifications
	to keep track of which window is key/main.

Sat Nov 20  6:56:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSMenu.m: Implemented ([-initDefaults]) to set window level
	in pre-initialisation so the information is available when backend
	window is created.

1999-11-19  David Lazaro Saz  <khelekir@encomix.es>

	* Source/NSMenuView.m ([NSMenuView -trackWithEvent:]): Added two
	defines (MOVE_THRESHOLD_DELTA and DELAY_MULTIPLIER) to make nicer the
	menu traversing.

1999-11-18  David Lazaro Saz  <khelekir@encomix.es>

	* Source/NSPopUpButton.m ([NSPopUpButton +initialize]): Fixed core
	dump on init.  Remains core on select.

Thu Nov 18  1999  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSCell.m ([-editWithFrame:inView:editor:delegate:event:]), 
	([-selectWithFrame:inView:editor:delegate:start:length:]): 
	Fixed bug.
	* Source/NSWindow.m ([-keyViewSelectionDirection]): Implemented.
	([-selectKeyViewFollowingView:]),([-selectKeyViewPrecedingView:]),
	([-selectNextKeyView:]),([-selectPreviousKeyView:]): Improvement,
 	made ready to support TABbing with selection of text between views
 	which are not necessarily textfields, eg forms.
	* Headers/AppKit/NSWindow.h: Added ivar _selection_direction.

1999-11-18  David Lazaro Saz  <khelekir@encomix.es>

	* Source/NSMenuView.m ([NSMenuView
	-performActionWithHighlightingForItemAtIndex:]): Added a short delay to
	item unhiglighting (100ms).
	([NSMenuView -trackWithEvent:]): When an attached menu is present other
	items only highlight when the cursor stops at them.

1999-11-17  David Lazaro Saz  <khelekir@encomix.es>
