@@ -11,7 +11,8 @@ Mon Nov 22 14:51:33:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
 	* Source/NSApplication.m: Fixed Windows menu for new menu API.
 	Changed to use arrays to store deactivated/hidden windows and to
 	keep track of key window when hidden.  Watch window notifications
-	to keep track of which window is key/main.
+	to keep track of which window is key/main. Handle making window
+	key and ordering front in modal sessions.
 
 Sat Nov 20  6:56:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
 
